# sx1262-rp2040-embassy

./: .taplo.toml  Cargo.toml  Embed.toml  README.md  memory.x  rust-toolchain-nightly.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: rust.yml
docs/: README.md
src/: config.rs  error.rs  main.rs
src/air_sensor/: mod.rs
src/board/: mod.rs
src/board_sensor/: mod.rs
src/config/: mod.rs
src/database/: mod.rs
src/device/: mod.rs
src/radio/: lora_radio.rs  mod.rs
src/sensor/: air_sensor.rs  mod.rs  soil_sensor.rs  system_sensor.rs
src/soil_sensor/: mod.rs
src/storage/: flash_storage.rs  mod.rs
src/transceiver/: mod.rs
