[package]
name = "rp2040"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-rp = { version = "0.3.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }

defmt = "0.3.5"
defmt-rtt = "0.4.0"
critical-section = "1.1"
cortex-m = {version = "0.7.6", features = ["inline-asm"]}
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"

[patch.crates-io]
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "712143b81fd02cca2621f021438fdfd042563651" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "712143b81fd02cca2621f021438fdfd042563651" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "712143b81fd02cca2621f021438fdfd042563651" }

[profile.release]
debug = 2
