[package]
name = "seed"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-sync = { version = "0.6.2" }
embassy-executor = { version = "0.7", features = [
  "arch-cortex-m",
  "executor-thread",
  "task-arena-size-65536",
] }
embassy-time = { version = "0.4", features = ["defmt-timestamp-uptime"] }
embassy-rp = { version = "0.3.1", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp2040",
] }
lora-phy = { git = "https://github.com/lora-rs/lora-rs.git", rev = "40926b7", features = [
  "lorawan-radio",
  "defmt-03",
] }
lorawan-device = { git = "https://github.com/lora-rs/lora-rs.git", rev = "40926b7", default-features = false, features = [
  "region-eu868",
  "embassy-time",
  "default-crypto",
  "defmt-03",
] }
assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "94ad10e2729afdf0fd5a77cd12e68409a982f58a" }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-storage = { version = "0.3.1" }

static_cell = { version = "2.1.0" }
portable-atomic = { version = "1.5", features = ["critical-section"] }
heapless = "0.8.0"
embassy-futures = "0.1.1"
ekv = { version = "1.0.0", features = [
  "crc",
  "align-4",
  "page-size-4096",
  "max-page-count-32",
] }

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
